<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.widget.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_news"
            android:checked="true"
            android:title="@string/news" />
        <item
            android:id="@+id/navigation_item_relaxs"
            android:title="@string/relax" />
        <item
            android:id="@+id/navigation_item_weather"
            android:title="@string/weather" />

        <item
            android:id="@+id/navigation_item_jokes"
            android:title="@string/jokes" />
        <item
            android:id="@+id/navigation_item_gifs"
            android:title="@string/gifs"/>
    </group>
</menu>